--- a/misa.mshopkeeper.ui/src/styles/layout/content.css
+++ b/misa.mshopkeeper.ui/src/styles/layout/content.css
@@ -4,7 +4,7 @@
     left: 150px;
     top: 52px;
     margin: 0px;
-    width: 1216px;
-    height: 573px;
+    width: calc(100% - 150px);
+    height: calc(100% - 52px);
     background-color: #e5e6eb;
 }
