--- a/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
+++ b/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
@@ -1,7 +1,74 @@
 .toolbar{
-    width: 1198px;
+    width: 100%;
     height: 36px;
     background-color:  #2b3173;
     display: flex;
+}
+.icon-toolbar{
+    align-self: center;
+    margin-right: 10px;
+    margin-left: 10px;
+    background-repeat: no-repeat; 
+
+}
+.btn-text{
+    padding-left: 20px !important;
+}
+.btn-add{
+    width: 102px !important;
+    display: flex;
+}
+.icon-add{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -1303px -112px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 8px;
+    top: 2px;
+}
+.icon-duplicate{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -972px -112px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 102px;
+    top: 2px;
+
+}
+.icon-edit{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -1453px -112px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 205px;
+    top: 2px;
+
+}
+.icon-delete{
+
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -1077px -112px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 268px;
+    top: 2px;
+}
+.icon-refresh{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -878px -112px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 329px;
+    top: 2px;
+
+}
+
+.btn-toolbar{
+    padding-left: 7px;
+    padding-right: 7px;
+    display: flex;
+    border-right: 1px solid #d0d0d0 !important;
+
+
 }
 
