--- a/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
@@ -1,87 +1,132 @@
 #shop-list{
     padding: 8px;
-    width: 1200px;
-    height: 557px;
+    width: calc(100% - 16px );
+    height: calc(100% - 52px);
 }
 .grid-wrap{
     width: 100%;
     height: 100%;
 
 }
-.grid-wrap .grid-header{
-    width: 1199px;
-    height: 64px;
+.grid-wrap .grid{
+    width: 100%;
+    height: 100%;
     display: flex;
     position: relative;
+    background-color: #fff;
+}
+table{
+    width: 100%;
+    
+}
+table tbody tr{
+   border-right: 1px solid #d0d0d0;
 
-
+}
+table tbody{
+    border-width: 1px!important;
+    border-style: solid;
+    border-color: #e1e1e1;
 }
 .m-column{
-   
-
-}
-.column-shop-code{
-    width: 160px;
     height: 64px;
+    position: relative;
+    padding: 0;
+    border-right: 1px solid #d0d0d0;
+    color: #212121;
+    font: 400 13px/19px Roboto,'Open Sans','Helvetica Neue',helvetica,arial,verdana,sans-serif;
+    outline: 0;
+    background-color: #f0f0f0!important;
+}
+.header-title{
+    width: 100%;
+    height: 32px;
+   
+   
+}
+.header-filter{
+    display: flex;
+    height: 32px;
+    
+}
+.header-filter .btn-option{
+    
+    width: 40px;
+}
+.input-filter{
+    flex: 1;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d0d0d0; 
+}
+.input-filter:focus{
+    border: 1px solid #636dde !important;
+}
+
+.input-filter input{
+    width: 92%;
+    height: 20px;
+ 
+    background-color: #fff;
+    border: none;
+}
+
+
+.column-shop-code{
+    position: absolute;
+    right: 1593px;
+    left: 0px;
 }
 .column-shop-name{
     position: absolute;
-    height: 64px;
-    width: 250px;
-    right: auto;
+    right: 1343px;
     left: 160px;
-    margin: 0px;
-    top: 0px;
 }
 .column-shop-address{
     position: absolute;
-    right: auto;
+    right: 280px;
     left: 410px;
-    margin: 0px;
-    width: 492px;
-    top: 0px;
-    height: 64px;
+
 }
 .column-shop-phone{
     position: absolute;
-    width: 130px;
-    right: auto;
-    left: 902px;
-    margin: 0px;
-    top: 0px;
-    cursor: col-resize;
-    height: 64px;
+    right: 150px;
+    left: 1473px;
+
 }
 .column-shop-status{
     position: absolute;
-    height: 64px;
-    width: 150px;
-    right: auto;
-    left: 1032px;
-    margin: 0px;
-    top: 0px;
-    cursor: col-resize;
-}
-    
-
-
-.header-title-wapper{
-
-}
-.header-title-wapper .header-title-content{
-    padding: 7px 10px 6px;
-    text-align: center;
-    margin: 0!important;
-
+    right: 0px;
+    left: 1591px;
 }
 .header-filter{
+    background-color: #fff;
 
 }
 .btn-option{
+   
+    border-color: #e1e1e1;
+    align-self: center;
 
 }
 .input-filter{
 
 }
+.grid-footer-wrap{
+    height: 32px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #e1e1e1;
+    padding: 10px;
+}
+.grid-footer{
+
+
+
+}
+
 
 
