--- a/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
+++ b/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
@@ -3,6 +3,10 @@
     height: 36px;
     background-color:  #2b3173;
     display: flex;
+    position:relative;
+}
+.btn-toolbar{
+    position:relative;
 }
 .icon-toolbar{
     align-self: center;
@@ -13,26 +17,33 @@
 }
 .btn-text{
     padding-left: 20px !important;
+    font: 400 15px roboto;
+    color: #fff;
+    padding: 0 5px;
+    max-width: 100%;
 }
 .btn-add{
-    width: 102px !important;
     display: flex;
+    left:0px;
+    width:102px !important;
+  
 }
+
 .icon-add{
-    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -1303px -112px;
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -1304px -112px;
     height: 30px;
     width: 20px;
     position: absolute;
-    left: 8px;
-    top: 2px;
+    left: -1px;
+    top: -6px;
 }
 .icon-duplicate{
     background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat -972px -112px;
     height: 30px;
     width: 20px;
     position: absolute;
-    left: 102px;
-    top: 2px;
+    left: -9px;
+    top: -5px;
 
 }
 .icon-edit{
@@ -40,8 +51,8 @@
     height: 30px;
     width: 20px;
     position: absolute;
-    left: 205px;
-    top: 2px;
+        left: -3px;
+    top: -5px;
 
 }
 .icon-delete{
@@ -50,16 +61,16 @@
     height: 30px;
     width: 20px;
     position: absolute;
-    left: 268px;
-    top: 2px;
+    left: -3px;
+    top: -6px;
 }
 .icon-refresh{
     background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -878px -112px;
     height: 30px;
     width: 20px;
     position: absolute;
-    left: 329px;
-    top: 2px;
+    left: -3px;
+    top: -5px;
 
 }
 
