--- a/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
@@ -7,12 +7,16 @@
     width: 100%;
     height: 100%;
     position:relative;
+    background-color: #ffffff;
+   
 }
 .data-table {
     position: absolute;
     top: 0;
     left: 0;
     right:0;
+   
+    
 }
 .grid {
     width: 100%;
@@ -27,13 +31,14 @@ table{
 }
 table thead tr{
     position:relative;
+    background-color: #EAEFF4;
    
 }
 .column{
     height:60px;
     border-right: 1px solid #e1e1e1;
-   
-    
+
+
 }
 .th-name{
     padding: 7px 10px 6px;
@@ -53,38 +58,164 @@ table thead tr{
     border: 1px solid #e1e1e1;;
     background-color:#ffff;
 }
+.icon-option-filter{
+    position: absolute;
+    top: 10px;
+    left: 13px;
+}
 .input-filter{
    position:absolute;
     top:0px;
-    
     left:34px;
     width:calc(100% - 38px);
     bottom:0;
-    background-color:#fffff;
-     border: 1px solid #e1e1e1;;
-    
+    background-color: #ffff;
+    border: 1px solid #e1e1e1;
 }
 table tbody tr{
     height:32px;
+
+}
+table tbody tr td{
+    border-style: solid;
+    border-color: #e9e9e9;
+    border-width: 0 1px 1px 0px;
+    text-align: left;
+    
 }
 table tbody tr:hover{
     background-color:#EAEFF4;
 }
+.th-filter select{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #e1e1e1;
+}
 
-.grid-footer-wrap{
+.footer{
+    
+    width: 100%;
     height: 32px;
     position: absolute;
     bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: #fff;
-    border: 1px solid #e1e1e1;
+    border: 1px solid #e1e1e1!important;
     padding: 10px;
 }
-.grid-footer{
+.footer .footer-icon{
+    align-self: center;
+  margin-right: 10px;
+  background-repeat: no-repeat; 
+  position: relative;
+  display: flex;
+}
+.wrap-icon{
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    border: 1px solid #d0d0d0;
+    border-radius: 3px;
+    cursor: pointer;
+    position:relative;
+}
+.wrap-icon-1{
+ 
+}
+.icon-1{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -649px -118px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 1px;
+    top: -5px;
+}
+.page-title{
+    position: absolute;
+    left: 60px;
+    align-self: center;
+}
+.wrap-page-number{
+    position: absolute;
+    left: 110px;
+    align-self: center;
+}
+.input-page-number{
+    width: 36PX;
+    height: 16PX;
+    padding: 4px 6px;
+    text-align: center;
+    border: 1px solid #d0d0d0;
+}
 
-
-
+.page-total{
+    position: absolute;
+    left: 167px;
+    align-self: center;
+}
+.wrap-icon-2{
+    left: 28px;
+    position: absolute;
+    
+}
+.icon-2{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -701px -118px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 1px;
+    top: -5px;
+}
+.icon-3{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -749px -118px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 1px;
+    top: -5px;
+}
+.icon-4{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -798px -118px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 1px;
+    top: -5px;
+}
+.icon-5{
+    background: url('https://eshopvnappg2.misacdn.net/QLCH/resources/images/common-icon.png') no-repeat  -849px -118px;
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    left: 1px;
+    top: -5px;
+}
+.wrap-icon-3{
+    left: 216px;
+    position: absolute;
+    
+}
+.wrap-icon-4{
+    left: 243px;
+    position: absolute;
+    
+}
+.wrap-icon-5{
+    left: 270px;
+    position: absolute;
+    
+}
+.page-select{
+    left: 300px;
+    position: absolute;
+    align-self: center;
+    width: 46px;
+    height: 26px;
+    border: none;
+}
+.page-select select{
+    width: 40px;
+    height: 25px;
+    border: 1px solid #d0d0d0;
+    padding-left: 4px;
 }
 
 
