--- a/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
@@ -19,30 +19,14 @@
     
 }
 .grid {
-    width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
+   
  
     /* background-color: red; */
 }
 ​
-table{
-    width: 100%;
-}
-table thead tr{
-    position:relative;
-    background-color: #EAEFF4;
-   
-}
-.column{
-    height:60px;
-    border-right: 1px solid #e1e1e1;
-
-
-}
-.th-name{
+.th-name-wrap{
     padding: 7px 10px 6px;
-}
+} 
 .th-filter{
     height: 35px;
     position:relative;
@@ -67,7 +51,7 @@ table thead tr{
    position:absolute;
     top:0px;
     left:34px;
-    width:calc(100% - 38px);
+    width:calc(100% - 39px);
     bottom:0;
     background-color: #ffff;
     border: 1px solid #e1e1e1;
@@ -90,7 +74,7 @@ table tbody tr:hover{
     width: 100%;
     height: 100%;
     border: 1px solid #e1e1e1;
-}
+} 
 
 .footer{
     
@@ -217,6 +201,36 @@ table tbody tr:hover{
     border: 1px solid #d0d0d0;
     padding-left: 4px;
 }
+.column{
+    border-right:1px solid #d0d0d0 ;
+    background-color: #f0f0f0;
 
+}
+.table-grid{
+    border: 1px solid #e1e1e1;
+}
+table tbody tr {
+    height: 32px;
+}
+table tbody tr td{
+    padding: 7px 10px 6px;
+    text-align: left;
+
+}
+.th-name{
+    width: 139px;
+    height: 19px;
+    padding: 7px 10px 6px 10px;
+}
+
+table tbody tr:nth-child(odd){
+    background-color:#eee;
+}
+table tr:nth-child(even){
+    background-color:white;
+}
+table tr:nth-child(1){
+    background-color:skyblue;
+}
 
 
