--- a/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/shoplist.css
@@ -232,5 +232,12 @@ table tr:nth-child(even){
 table tr:nth-child(1){
     background-color:skyblue;
 }
+table{
+    overflow-y: auto;
+}
 
+.table-grid{
+   
+    overflow: auto;
+}
 
