--- a/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
+++ b/misa.mshopkeeper.ui/src/styles/basics/toolbar.css
@@ -78,7 +78,7 @@
     padding-left: 7px;
     padding-right: 7px;
     display: flex;
-    border-right: 1px solid #d0d0d0 !important;
+    border-right: 1px solid #190472 !important;
 
 
 }
