--- a/misa.mshopkeeper.ui/src/styles/pages/storedetail.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storedetail.css
@@ -162,11 +162,11 @@
 .dialog-container {
   z-index: 5;
   width: 600px;
-  height: 479px;
+  height: 511px;
   background-color: white;
   position: fixed;
-  top: calc((100vh - 479px) / 2);
-  left: calc((100vw - 600px) / 2);
+  top: calc((100vh - 511px) / 2);
+  left: calc((100% - 600px) / 2);
   z-index: 5;
   border-radius: 3px;
 }
@@ -284,6 +284,7 @@
   height: 61px;
   padding: 0 10px;
   justify-content: space-between;
+  flex: 1;
 }
 .dialog-footer .dialog-footer-left {
   display: flex;
@@ -308,4 +309,9 @@
 
 .warn{
   border: 1px solid red !important;
+}
+
+.checkbox{
+  height: 32px;
+  margin-top:-5px;
 }
