--- a/misa.mshopkeeper.ui/src/styles/pages/storelist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storelist.css
@@ -22,18 +22,23 @@
 }
 .shop-code{
     width: 160px;
+    min-width: 160px;
+   
 }
 .shop-name{
     width: 250px;
+    min-width: 250px;
 }
 .shop-address{
-
+    min-width: 250px;
 }
 .shop-phone{
     width: 130px;
+    min-width: 130px;
 }
 .shop-status{
     width: 150px;
+    min-width: 150px;
 }
 .th-filter{
     height: 35px;
@@ -46,7 +51,6 @@
     width:34px;
     bottom:0;
     top:0;
-    
     border: 1px solid #e1e1e1;;
     background-color:#ffff;
 }
@@ -61,6 +65,7 @@
     top:0px;
     left:34px;
     width:calc(100% - 39px);
+    
     bottom:0;
     background-color: #ffff;
     border: 1px solid #e1e1e1;
@@ -79,8 +84,23 @@ table tbody tr td{
     border-color: #e9e9e9;
     border-width: 0 1px 1px 0px;
     text-align: left;
-    
 }
+.store-code{
+    max-width: 142px;
+}
+.store-name{
+    max-width: 232px;
+}
+.store-address{
+    max-width: 439px;
+}
+.store-phone{
+    max-width: 141px;
+}
+.store-status{
+    max-width: 141px;
+}
+
 table tbody tr:hover{
     background-color:#EAEFF4;
 }
@@ -233,7 +253,12 @@ table tbody tr td{
     padding: 7px 10px 6px;
     text-align: left;
 
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
+
+
 .th-name{
     width: 139px;
     height: 19px;
@@ -275,6 +300,10 @@ table tr:hover{
 
 .selectedRow{
     background-color: #E2E4F1 !important;
+}
+
+.disable{
+    background-color: #6b6f9d;
 }
 
 
