--- a/misa.mshopkeeper.ui/src/styles/pages/storelist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storelist.css
@@ -23,6 +23,7 @@
 .shop-code{
     width: 160px;
     min-width: 160px;
+    
    
 }
 .shop-name{
@@ -84,9 +85,12 @@ table tbody tr td{
     border-color: #e9e9e9;
     border-width: 0 1px 1px 0px;
     text-align: left;
+    max-height: 32px  !important;
+    white-space: nowrap;
 }
 .store-code{
     max-width: 142px;
+   
 }
 .store-name{
     max-width: 232px;
@@ -155,6 +159,13 @@ table tbody tr:hover{
     position: absolute;
     left: 110px;
     align-self: center;
+    border: none;
+}
+.wrap-page-number:focus{
+    position: absolute;
+    left: 110px;
+    align-self: center;
+    border: 0;
 }
 .input-page-number{
     width: 36PX;
