--- a/misa.mshopkeeper.ui/src/styles/pages/storelist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storelist.css
@@ -173,6 +173,7 @@ table tbody tr:hover{
     padding: 4px 6px;
     text-align: center;
     border: 1px solid #d0d0d0;
+    outline: none !important;
 }
 
 .page-total{
@@ -319,6 +320,9 @@ table tr:hover{
 
 .disable{
     background-color: #6b6f9d;
+}
+.th-filter select{
+    outline: none !important;
 }
 
 
