--- a/misa.mshopkeeper.ui/src/styles/pages/storedetail.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storedetail.css
@@ -10,8 +10,13 @@
     width: 78px;
     height: 35px;
     margin-top: -10px;
+    outline: none;
 }
 .btn-help:hover{
+  cursor: pointer;
+  background-color: #E5E6Eb;
+}
+.btn-help:focus{
   cursor: pointer;
   background-color: #E5E6Eb;
 }
@@ -54,10 +59,14 @@
   background-color: #2b3173;
   border:1px solid #2b3173!important;
   position: absolute;
-  right: 231px;
+  right: 245px;
   cursor: pointer;
+  outline: none;
 }
 .btn-save:hover{
+  background-color: #6b6f9d;
+}
+.btn-save:focus{
   background-color: #6b6f9d;
 }
 
@@ -81,10 +90,14 @@
   width: 138px; 
   height: 35px;
   position: absolute;
-  right: 91px;
+  right: 105px;
   cursor: pointer;
+  outline: none;
 }
 .btn-plus:hover .text-plus{
+  color: #6B6F9D;
+}
+.btn-plus:focus .text-plus{
   color: #6B6F9D;
 }
 .icon-plus{
@@ -110,13 +123,18 @@
 .btn-cancel{
  width: 85px;
  background-color: #fff;
-  position: absolute;
-  right: 2px;
+ position: absolute;
+ right: 16px;
+ border: 1px solid #ffffff !important;
+ outline: none;
   
 }
 .btn-cancel:hover{
- border: 1px solid #5fa2dd !important;
+ border: 1px solid #2b3173 !important;
 }
+.btn-cancel:focus{
+  border: 1px solid #2b3173 !important;
+ }
 .btn-right .text-cancel{
   top: 10px;
   
@@ -129,7 +147,7 @@
     position: absolute;
     padding: 0px !important;
     left: 7px;
-    top: 9px;
+    top: 10px;
 }
 
 
@@ -291,7 +309,7 @@
   display: flex;
   align-items: center;
   height: 61px;
-  padding: 0 10px;
+  padding: 0 16px;
   justify-content: space-between;
   
 
@@ -330,8 +348,14 @@
 }
 .checkbox-wrap input{
   margin-left: 106px;
-  
+}
+.checkbox-wrap .tick-checkbox{
+  margin-left: 106px;
 }
 .checkbox-wrap input:focus{
   background-color:#2b3173;
+}
+.dialog-row textarea{
+  font-family: roboto,Tahoma,sans-serif!important;
+    font-size: 13px;
 }
