--- a/misa.mshopkeeper.ui/src/styles/pages/storelist.css
+++ b/misa.mshopkeeper.ui/src/styles/pages/storelist.css
@@ -239,12 +239,18 @@ table tbody tr:hover{
     width: 46px;
     height: 26px;
     border: none;
+    outline: none !important;
 }
+
 .page-select select{
-    width: 40px;
+    width: 50px;
     height: 25px;
     border: 1px solid #d0d0d0;
     padding-left: 4px;
+    outline: none !important;
+}
+.page-select select:hover{
+    cursor: pointer;
 }
 .column{
     border-right:1px solid #d0d0d0 ;
@@ -264,6 +270,10 @@ table thead tr th{
 table tbody tr {
     height: 32px;
 }
+table tbody tr:hover{
+    
+}
+
 table tbody tr td{
     padding: 7px 10px 6px;
     text-align: left;
